hphp/test/zend/good/Zend/tests/bug51421.php.expectf

Fatal error: Declaration of Test::__construct() must be compatible with that of TestInterface::__construct() in %s/bug51421.php on line 9
